--- a/404.html
+++ b/404.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; URL='https://pornhub.com/'"/>
+<h1> 404 (-300) </h1>
+  <h3>è stata rilevata una disabilità mentale</h3>
